fixed logo sizing on mobile

--- a/src/assets/css/modules/magic.css
+++ b/src/assets/css/modules/magic.css
@@ -16,6 +16,7 @@
   position: absolute;
   top: var(--star-top);
   width: var(--size);
+  z-index: 2;
 }
 
 .magic > .magic-star > svg {
